# zero2prod

./: .env  Cargo.toml  README.md  configuration.yaml  docker-compose.yml
.cargo/: config.toml
.github/workflows/: general.yml
environment/: config_db.sh  init_db.sh  profile
migrations/: 20231003182304_create_subscriptions_table.sql
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
